# rx-controls-suite

./: .gitignore  CITATION.cff  CLAUDE.md  LICENSE-COMMERCIAL.md  README.md
.github/workflows/: rxepics-python.yml  rxtango-java.yml  rxtine-java.yml
RxEpics/python/: CLAUDE.md  RxEpics-plan.md  docker-compose.yml  pyproject.toml  requirements.txt  test.db
RxEpics/python/examples/: README.md  alarm_monitor.py  calibration_pipeline.py  pv_correlate.py  pv_pipeline.py  pv_running_stats.py  pv_throttle.py
RxEpics/python/src/rxepics/: __init__.py  channel.py  client.py  context.py  monitor.py
RxTango/java/: CLAUDE.md  docker-compose.yml  jbang-catalog.json
RxTango/java/examples/: AlarmMonitor.java  CalibrationPipeline.java  FluentClient.java  MultiDeviceSnapshot.java  README.md  TangoTestBackpressure.java  TangoTestCorrelate.java  TangoTestPipeline.java  TangoTestRetry.java  TangoTestRunningStats.java  TangoTestSlidingAverage.java  TangoTestThrottle.java  TangoTestZipWindow.java
RxTango/java/src/: RxTangoAttribute.java  RxTangoAttributeWrite.java  RxTangoCommand.java  TangoClient.java  (+1 more)
RxTine/java/: CLAUDE.md  README.md  docker-compose.yml  jbang-catalog.json
examples/: MonitorAttribute.java  PollAttribute.java  ReadAttribute.java  TangoTestStats.java  VerifySpec.java  XRayScan.java  ZipAttributes.java  monitor_pv.py  multi_pv_snapshot.py  poll_pv.py  pv_backpressure.py  pv_sliding_average.py  pv_stats.py  read_pv.py  tango_epics_normalize.py  zip_pvs.py
src/: RxTango.java  RxTangoAttributeChangePublisher.java
src/rxepics/: __init__.py  channel_write.py
(+22 files in other folders)
